unpackaged/main/default/objects/zkfedex__ExportDetails__c/zkfedex__ExportDetails__c.object-meta.xml
<CustomObject>
    <label>FedEx Export Details</label>
    <nameField>
        <displayFormat>ExportDetails-{00000000}</displayFormat>
        <label>FedEx Export Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Export Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>