unpackaged/main/default/objects/zkfedex__ExportDetails__c/fields/zkfedex__B13aFilingOption__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__B13aFilingOption__c</fullName>
    <label>B13A Filing Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>