unpackaged/main/default/objects/zkfedex__ExportDetails__c/fields/zkfedex__ExportComplianceStatement__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ExportComplianceStatement__c</fullName>
    <description>Field for exporting-country-specific export data (e.g. B13A for CA, FTSR Exemption or AES Citation for US)</description>
    <inlineHelpText>Field for exporting-country-specific export data (e.g. B13A for CA, FTSR Exemption or AES Citation for US)</inlineHelpText>
    <label>Export Compliance Statement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>