unpackaged/main/default/objects/zkfedex__ExportDetails__c/fields/zkfedex__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>zkfedex__Shipment__c</referenceTo>
    <relationshipLabel>FedEx Export Details</relationshipLabel>
    <relationshipName>FedEx_Export_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>